--- a/src/app/components/five-elements/five-elements.component.scss
+++ b/src/app/components/five-elements/five-elements.component.scss
@@ -81,6 +81,10 @@
         height: 100px;
       }
 
+      img {
+        border-radius: 1em;
+      }
+
       button {
         color: var(--5elemstart-fore);
       }
